--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+appdirs==1.4.4
 certifi==2020.4.5.2
 cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 cryptography==2.9.2
+distlib==0.3.1
+filelock==3.0.12
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
 idna==2.9
+importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+pipenv==2020.6.2
 pycparser==2.20
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 SQLAlchemy==1.3.17
 urllib3==1.25.9
+virtualenv==20.0.27
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 wincertstore==0.2
+zipp==3.1.0
