--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
+gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
