--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ wincertstore = "==0.2"
 zipp = "==3.1.0"
 Jinja2 = "==2.11.2"
 SQLAlchemy = "==1.3.17"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
