--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ filelock==3.0.12
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
-gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
@@ -17,6 +16,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 pipenv==2020.6.2
+psycopg2==2.8.5
 pycparser==2.20
 requests==2.24.0
 requests-oauthlib==1.3.0
