trying to run 2 commands with &

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,12 +4,6 @@ applications:
    routes:
    - route: bettersleep.eu-gb.mybluemix.net
    memory: 128M
-   command: gunicorn wsgi:app --preload
-   services:
-   - sqldatabase
-applications:
- - name: bettersleep
-   memory: 128M
-   command: python -m main.keep_checking
+   command: gunicorn wsgi:app --preload & python -m main.keep_checking
    services:
    - sqldatabase
