--- a/manifest.yml
+++ b/manifest.yml
@@ -7,3 +7,9 @@ applications:
    command: gunicorn wsgi:app --preload & python -m main.keep_checking
    services:
    - sqldatabase
+   env :
+     CLIENT_ID : ""
+     CLIENT_SECRET : ""
+     REDIRECT_URI : ""
+
+
