--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,14 @@ Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
 gunicorn==20.0.4
+ibm-db==3.0.2
+ibm-db-sa==0.3.5
 idna==2.9
 importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
-pipenv==2020.6.2
-psycopg2==2.8.5
 pycparser==2.20
 requests==2.24.0
 requests-oauthlib==1.3.0
@@ -29,7 +29,3 @@ virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 wincertstore==0.2
 zipp==3.1.0
-ibm_db  
-ibm_db_sa  
-pyodbc
-mysqlclient
