token_created_at col name issue fix

--- a/manifest.yml
+++ b/manifest.yml
@@ -11,6 +11,6 @@ applications:
    env :
      CLIENT_ID : ""
      CLIENT_SECRET : ""
-     REDIRECT_URI : ""
+     REDIRECT_URI : "https://bettersleep.eu-gb.mybluemix.net/oauth2callback"
 
 
